--- a/terminal_DH.ipynb
+++ b/terminal_DH.ipynb
@@ -59,7 +59,8 @@
     "* перемещаем файл: ```mv``` path_to_file new_path_to_file\n",
     "* копируем файл : ```cp``` path_to_file new_path_to_file\n",
     "* смотрим на файл: ```cat``` и ```head , tail```\n",
-    "* запись в файл: ```echo``` string ```>>``` path_to_file\n",
+    "* запись в файл: ```echo``` string ```>``` path_to_file\n",
+    "* добавить в файл: ```echo``` string ```>>``` path_to_file\n",
     "* поиск паттерна: ```grep``` search_string path_to_file\n"
    ]
   },
